tests/baselines/reference/objectBindingPatternKeywordIdentifiers02.errors.txt
tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers02.ts(2,14): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers02.ts (1 errors) ====
    
    var { while: while } = { while: 1 }
                 ~~~~~
!!! error TS1003: Identifier expected.